# gpupoor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
gpupoor/: nvidia_smi.py
